--- a/src/global.css
+++ b/src/global.css
@@ -1,13 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gilroy-Bold:wght@400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
-
-@font-face {
-  font-family: "Gilroy-Bold";
-  src: url("/public/Gilroy-Bold.ttf");
-  font-weight: 400;
-}
 
 @tailwind base;
 @tailwind components;
